# shapley-value-independent-utility

./: CITATION.cff  Cargo.toml  README.md
config/: config.cfg
data/: country.json  countrylanguage.json  world-ground-truth.json
data/ssb/: customer.csv  customer.json  date.csv  date.json  lineorder.csv  lineorder.json  part.csv  part.json  supplier.csv  supplier.json
data/tpch/: customer.csv  customer.json  lineitem.csv  lineitem.json  nation.json  orders.csv  orders.json  part.csv  part.json  partsupp.csv  partsupp.json  region.json
data/word/: city.json
data/world/: city.csv  city.json  country.csv  country.json  countrylanguage.csv  countrylanguage.json
data/world-metadata/: city-index.json  city-seller.json  country-index.json  country-seller.json  countrylanguage-index.json  countrylanguage-seller.json
scripts/: assign_data.py  json_to_csv.py
src/: alg.rs  dataset.rs  io.rs  join_plan.rs  lib.rs  main.rs  seller.rs  table.rs  utils.rs
src/alg/: join.rs  permutation.rs  proposed.rs  result.rs  subset_utility.rs  traditional.rs
src/alg/proposed/: synthesis.rs  synthesis_sv.rs
src/alg/proposed/synthesis_sv/: non_linear_comb.rs  non_linear_lookup.rs
