[package]
name = "shapley-value"
version = "0.1.0"
edition = "2021"
publish = false

[profile.release]
lto = true
opt-level = 3

[dependencies]
anyhow = "1.0"
dashmap = "5.1"
derive_more = "0.99"
glob = "0.3"
itertools = "0.10"
once_cell = "1.9"
polars = { version = "0.19", features = ["lazy", "performant"] }
rand = "0.8"
rand_distr = "0.4"
rayon = "1.5"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
structopt = "0.3"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

